--- a/Tulip/css/style.css
+++ b/Tulip/css/style.css
@@ -47,6 +47,10 @@ p, li
     text-align: justify;
 }
 
+#description {
+    margin-top: 145px;
+}
+
 img, iframe, .row
 {
     border-radius: 25px;
@@ -55,10 +59,6 @@ img, iframe, .row
 img, iframe
 {
     padding: 0 !important;
-}
-
-#description img {
-    margin: auto;
 }
 
 .info
@@ -90,12 +90,6 @@ img, iframe
     margin-top: 5px;
 }
 
-@media (min-width: 768px) {
-    #description img {
-        width: 55%;
-    }
-}
-
 @media (min-width: 1200px) {
     #description p {
         font-size: 17px;
@@ -118,11 +112,6 @@ img, iframe
     {
         height: 300px;
     }
-
-    .container-fluid
-    {
-        padding: 0 !important;
-    }
 }
 
 @media (min-width: 768px) and (max-width: 880px){
@@ -136,15 +125,9 @@ img, iframe
     }
 }
 
-.navbar-brand
-{
-    padding: 5px 10px;
-    background-color: #E0F1FF;
-}
-
 .logo
 {
-    height: 43px;
+    height: 60px;
     border-radius: 0;
 }
 
@@ -153,22 +136,130 @@ p.contact-p
     text-align: left !important;
 }
 
-.collapse
-{
-    margin-left: -60px;
-}
-
 .navbar
 {
-    padding: 0;
-}
-
-.container-fluid
-{
-    padding: 5px 0;
+    top: 100px;
 }
 
 .contact-footer
 {
     padding-left: 20px;
+}
+
+
+.slider {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+.slider-wrapper {
+    display: flex;
+    transition: transform 0.5s ease;
+}
+.slide {
+    min-width: 100%;
+    box-sizing: border-box;
+}
+.slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    aspect-ratio: 5 / 3;
+}
+.slider-controls {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+}
+.slider-controls button {
+    background: rgba(0, 0, 0, 0.5);
+    border: none;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+}
+.slider-dots {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+}
+.slider-dots div {
+    width: 10px;
+    height: 10px;
+    background: #ddd;
+    margin: 0 5px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.slider-dots .active {
+    background: #333;
+}
+
+.large-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.small-image {
+    width: 100%;
+    height: calc(50% - 5px); /* Adjust the height to account for margin */
+    object-fit: cover;
+    margin-bottom: 10px; /* Adjust the margin between images */
+    border-radius: 0;
+    border-top-right-radius: 25px;
+}
+.img-container {
+    position: relative;
+    height: 100%;
+}
+.img-container img:last-child {
+    margin-bottom: 0; /* Remove margin from the last image */
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 25px;
+}
+
+@media (max-width: 768px) {
+    .large-image {
+        border-radius: 25px;
+    }
+
+    .small-image {
+        border-radius: 25px;
+    }
+
+    .img-container img:last-child {
+        border-radius: 25px;
+    }
+}
+
+
+
+.logo-div {
+    height: 100px;
+    text-align: center;
+    padding: 5px;
+}
+
+
+@font-face {
+    font-family: 'Freestyle Script SHOP';
+    src: url('fonts/FCS.TTF') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.logo-div p {
+    font-weight: bold;
+    color: #0166b3;
+    padding: 0;
+    margin: 0;
+    letter-spacing: 1px;
 }
