--- a/Tulip/css/style.css
+++ b/Tulip/css/style.css
@@ -263,3 +263,15 @@ p.contact-p
     margin: 0;
     letter-spacing: 1px;
 }
+
+
+.fade-in {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 1s ease, transform 1s ease;
+}
+
+.fade-in.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
