--- a/Tulip/css/style.css
+++ b/Tulip/css/style.css
@@ -265,13 +265,13 @@ p.contact-p
 }
 
 
-.fade-in {
+.image-wrapper {
   opacity: 0;
   transform: translateY(30px);
-  transition: opacity 1s ease, transform 1s ease;
+  transition: opacity 0.6s ease, transform 0.6s ease;
 }
 
-.fade-in.visible {
+.image-wrapper.visible {
   opacity: 1;
   transform: translateY(0);
 }
